fixed top spacing

--- a/wiki-styles.css
+++ b/wiki-styles.css
@@ -6,6 +6,10 @@ body {
   padding-right: 1%;
 }
 
+#pagecontent-main {
+  margin-top: 78px;
+}
+
 /* LOGO DESIGN */
 #logo {
   position: fixed;
@@ -92,8 +96,3 @@ body {
 }
 /* SIDE NAV-BAR END */
 /* HEADER  */
-
-#page-header h1 {
-  position: relative;
-  left: 14%;
-}
